# regarding

./: AUTHORS  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: main.yml  python-package.yml  tests.yml
regarding/: __about__.py  __init__.py  __main__.py  about.py  meta.py
tests/: conftest.py  test_regarding.py
