[tool.regarding]
years = "2020"
release_name = ""

[tool.poetry]
name = "regarding"
version = "0.1.3"
description = "Create __about__.py files from `pyproject.toml`."
readme = "README.rst"
authors = ["Travis Shirk <travis@pobox.com>"]
include = [
    "AUTHORS", "Makefile", "tox.ini", "poetry.lock", "requirements.txt",
    "tests/*.py"
]
homepage = "https://github.com/nicfit/regarding"

[tool.poetry.scripts]
regarding = "regarding.__main__:main"

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.2"
setuptools = "^50.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
dephell = "^0.8.3"
tox = "^3.20.1"
twine = "^3.2.0"
check-manifest = "^0.45"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.dephell]
[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}